# WRO-FE-XX

./: .gitignore  LICENSE.txt  README.md  XX_Parts_Lists.xlsx  laps_and_direction_draft.md  parking1_draft.md  pyproject.toml  vision_methods_draft.md
XX_2025_package.egg-info/: PKG-INFO  top_level.txt
code/: communication_draft.md  motor_control.md  pyproject.toml  raspberry_pi_setup.md
code/XX_2025_package/: .gitignore  HSV_ajuster.py  main.py  run.py
code/XX_2025_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
code/XX_2025_package/classes/: arduino_comms.py  camera_manager.py  context_manager.py  image_algoriths.py  info_overlay_processor.py  lap_tracker.py  logger.py  video_thread.py
code/XX_2025_package/tests/: map_plotter.py  test4.py  test5.py
code/XX_2025_package/utils/: debug_timer.py  enums.py  fake_picamera2.py  image_color_utils.py  image_drawing_utils.py  image_transform_utils.py  image_utils.py
code/XX_2025_package/utils/video/: video_counter.py
code/XX_2025_package/video/: video_counter.py
code/arduino/: .gitignore
code/arduino/src/: WRO FE 2025.code-workspace  main.cpp
code/arduino/src/classes/: serial_reciever.cpp  serial_reciever.h
code/arduino/src/utils/: voltage_utils.cpp  voltage_utils.h
code/md/: parking.md
code/pi/: HSV_ajuster.py  battery.py  main.py  test3.py  test_global_1.py
code/pi/classes/: camera_manager.py  image_algoriths.py  logger.py
code/pi/log_server/: log_server.py
code/pi/tests/: test.py  test2.py
code/pi/utils/: image_utils.py
elec/: README_elec.md
mech/: README_mech.md
(+31 files in other folders)
