[build-system]
requires = ["setuptools>=42",
            "wheel"]

build-backend = "setuptools.build_meta"

[project]
name = "XX_2025_package"
version = "0.1.0"
authors = [{ name = "Michael Bruneau"}]
description = "the package to test within a class"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyserial>=3.5",
                "opencv-python>=4.12.0.88"]

[tool.setuptools]
packages = ["XX_2025_package"]